--- a/me.qgbase.com/pages/homepage.html
+++ b/me.qgbase.com/pages/homepage.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<title>T-Rex Game</title>
+<title>郭庆卓然的主页</title>
 <meta charset="UTF-8">
 <meta name="description" content="Ripped T-Rex/Dino game of Chromium">
 <meta property="og:title" content="Play the hidden T-Rex Dinosaur game of Chromium .">
